# serial-notifier

./: .gitignore  README.md  config_readers.py  configparsers.py  configs.py  downloader.py  enums.py  loggers.py  model.py  project_settings.py  pyproject.toml  requirements.txt  schedulers.py  serial_notifier.py  setting.conf  setting.py  sites.conf  update_status.py  upgrade_state.py  widgets.py  workers.py
alembic/: env.py
alembic/versions/: 2dcf316f847e_cascade_delete_series.py  3fc0a8b9bb02_init.py  a3d043a089fb_serial_name_is_unique.py
common/: common.py  downloader.py  parser.py
db/: __init__.py  helper_func.py  managers.py  models.py  utils.py
downloaders/: __init__.py  async_downloader.py  base_downloader.py  go_downloader.py  thread_downloader.py
gui/: add_new_tv_series.py  mainwindow.py  widgets.py  windows.py
icons/: app-icon-512x512.icns
notice_plugins/: __init__.py  system.py
parser/: __init__.py  parser.py  services.py
parsers/: __init__.py  parser.py  services.py
tools/: create_macos_package.py
utils/: create_macos_package.py
