[tool.poetry]
name = "serial-notifier"
version = "1.0.2"
description = ""
authors = ["Aleksey Petrunnik <zzz_vvv.94@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "=3.5.4"
async_timeout = "=3.0.1"
SQLAlchemy = "=1.2.7"
dependency_injector = "=3.12.0"
quamash = "=0.6.1"
cssselect = "=1.0.3"
lxml = "=4.2.1"
PyQt5 = "=5.13.0"
sip = "=4.19.8"
requests = "=2.18.4"
gopac = { git = "https://alex925@bitbucket.org/alex925/gopac.git", branch = "master" }

[tool.poetry.dev-dependencies]
PyQt5-stubs = "=5.13.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
