[tool.poetry]
name = "serial-notifier"
version = "1.0.4"
description = ""
authors = ["Aleksey Petrunnik <zzz_vvv.94@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "=3.5.4"
async_timeout = "=3.0.1"
SQLAlchemy = "=1.3.6"
dependency_injector = "=3.14.8"
quamash = "=0.6.1"
cssselect = "=1.1.0"
lxml = "=4.4.0"
PyQt5 = "=5.13.0"
sip = "=4.19.8"
requests = "=2.22.0"
gopac = { git = "https://alex925@bitbucket.org/alex925/gopac.git", branch = "master" }
alembic ="=1.0.11"

[tool.poetry.dev-dependencies]
PyQt5-stubs = "=5.13.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
